compiler/toc_hir_lowering/tests/snapshots/lowering__lower_prim_type-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : nat2"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        StmtItem@(FileId(1), 0..12): ItemId(0)
          ConstVar@(FileId(1), 0..12): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..12): Nat2

