compiler/toc_hir_lowering/tests/snapshots/lowering__lower_procedure_def-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    procedure empty_params()\n    end empty_params\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..55): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..50): []
        StmtItem@(FileId(1), 5..50): ItemId(0)
          Subprogram@(FileId(1), 5..50): "empty_params"@(FileId(1), 15..27) []
            Void@(dummy)
            StmtBody@(FileId(1), 34..34): []

