compiler/toc_hir_lowering/tests/snapshots/lowering__lower_procedure_def-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    procedure a : 4 + 4 end a\n    procedure b() : 6 + 8 end b\n    procedure c(k : int) : 9 + 2 end c\n    "

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(3)
    Module@(FileId(1), 0..106): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..101): []
        StmtItem@(FileId(1), 5..30): ItemId(0)
          Subprogram@(FileId(1), 5..30): "a"@(FileId(1), 15..16)
            ExprBody@(FileId(1), 19..24)
              Binary@(FileId(1), 19..24): Add
                Literal@(FileId(1), 19..20): Integer(4)
                Literal@(FileId(1), 23..24): Integer(4)
            Void@(FileId(1), 5..24)
            StmtBody@(FileId(1), 25..25): []
        StmtItem@(FileId(1), 35..62): ItemId(1)
          Subprogram@(FileId(1), 35..62): "b"@(FileId(1), 45..46) []
            ExprBody@(FileId(1), 51..56)
              Binary@(FileId(1), 51..56): Add
                Literal@(FileId(1), 51..52): Integer(6)
                Literal@(FileId(1), 55..56): Integer(8)
            Void@(FileId(1), 35..56)
            StmtBody@(FileId(1), 57..57): []
        StmtItem@(FileId(1), 67..101): ItemId(2)
          Subprogram@(FileId(1), 67..101): "c"@(FileId(1), 77..78) ["k"@(FileId(1), 79..80)]
            ExprBody@(FileId(1), 90..95)
              Binary@(FileId(1), 90..95): Add
                Literal@(FileId(1), 90..91): Integer(9)
                Literal@(FileId(1), 94..95): Integer(2)
            Primitive@(FileId(1), 83..86): Int
            Void@(FileId(1), 67..95)
            StmtBody@(FileId(1), 96..96): ["k"@(FileId(1), 79..80)]
error in file FileId(1) at 17..24: device specification is not allowed here
| error in file FileId(1) for 17..24: `procedure` is not in a device monitor
error in file FileId(1) at 49..56: device specification is not allowed here
| error in file FileId(1) for 49..56: `procedure` is not in a device monitor
error in file FileId(1) at 88..95: device specification is not allowed here
| error in file FileId(1) for 88..95: `procedure` is not in a device monitor

