compiler/toc_hir_lowering/tests/snapshots/lowering__lower_procedure_def-6.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "\n    procedure pars(a, a : int, a : int1)\n        var a : int2\n    end pars"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(2)
    Module@(FileId(1), 0..75): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..75): []
        StmtItem@(FileId(1), 5..75): ItemId(1)
          Subprogram@(FileId(1), 5..75): "pars"@(FileId(1), 15..19) [
            "a"@(FileId(1), 20..21),
            "a"@(FileId(1), 23..24),
            "a"@(FileId(1), 32..33)
          ]
            Primitive@(FileId(1), 27..30): Int
            Primitive@(FileId(1), 27..30): Int
            Primitive@(FileId(1), 36..40): Int1
            Void@(dummy)
            StmtBody@(FileId(1), 50..62): ["a"@(FileId(1), 20..21), "a"@(FileId(1), 23..24), "a"@(FileId(1), 32..33)]
              StmtItem@(FileId(1), 50..62): ItemId(0)
                ConstVar@(FileId(1), 50..62): var "a"@(FileId(1), 54..55)
                  Primitive@(FileId(1), 58..62): Int2
error in file FileId(1) at 23..24: `a` is already declared in this scope
| note in file FileId(1) for 20..21: `a` previously declared here
| error in file FileId(1) for 23..24: `a` redeclared here
error in file FileId(1) at 32..33: `a` is already declared in this scope
| note in file FileId(1) for 23..24: `a` previously declared here
| error in file FileId(1) for 32..33: `a` redeclared here
error in file FileId(1) at 54..55: `a` is already declared in this scope
| note in file FileId(1) for 32..33: `a` previously declared here
| error in file FileId(1) for 54..55: `a` redeclared here

