compiler/toc_hir_lowering/tests/snapshots/lowering__lower_procedure_def-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "procedure pass_me(var register by_both : int) end pass_me"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..57): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..57): []
        StmtItem@(FileId(1), 0..57): ItemId(0)
          Subprogram@(FileId(1), 0..57): "pass_me"@(FileId(1), 10..17) [var "by_both"@(FileId(1), 31..38)]
            Primitive@(FileId(1), 41..44): Int
            StmtBody@(FileId(1), 46..46): ["by_both"@(FileId(1), 31..38)]
error in file FileId(1) at 22..30: incompatible parameter specifiers
| error in file FileId(1) for 22..30: cannot pass by reference and by register at the same time
| note in file FileId(1) for 18..21: passing by reference specified here
| info: registers don't have a location in memory, so they cannot be passed by reference

